# mlb-agentic

./: .env.example  README.md  actions.py  chadwick_register.yaml  cli.py  contract.yaml  langchain_example.py  manifest.yaml  models.py  openai_tool_schema.json  pyproject.toml  request.example.json  retrosheet_csv.yaml  retrosheet_traditional.yaml  runtime.py  statcast_savant.yaml  vars.yaml
config/jobs/: chadwick_register.yaml  retrosheet_csv.yaml  retrosheet_traditional.yaml  statcast_savant.yaml
src/mlb_agent_bootstrap/: __init__.py  actions.py
src/mlb_agent_bootstrap/adapters/: chadwick.py  retrosheet.py  statcast.py
src/mlb_agent_bootstrap/loaders/: __init__.py  bronze_postgres.py
