[project]
name = "mlb-agent-bootstrap"
version = "0.1.0"
description = "Deterministic MLB data bootstrap runtime for AI agents"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "requests>=2.32",
  "typer>=0.12"
]

[project.scripts]
mlb-bootstrap = "mlb_agent_bootstrap.cli:app"
